--- a/assets/css/vegitablePageStyle.css
+++ b/assets/css/vegitablePageStyle.css
@@ -1,3 +1,8 @@
+
+h1{
+    font-size: 40px;
+}
+
 #filter_choice{
     float: right;
     margin-right: 30px;
@@ -13,12 +18,22 @@ button{
 }  
 #products{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
     grid-gap: 20px;
     margin-right: 30px;
     margin-top: 30px;
 }
+.product{
+    margin: 0px;
+    padding: 0px;
+}
 img{
  width: 100%;
- height: 200px;
+ height: 50%;
+ border-radius: 15%;
+ border-bottom-left-radius: 0;
+ border-bottom-right-radius: 0;
+}
+.bottom_product_description{
+    background-color: rgb(243, 234, 224);
 }
