--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,17 @@ body{
     background-color: black;
     color:white ;
 }
+.dropdown-content {
+  display: none;
+  margin-top: 10px;
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+}
+.show {
+  display: block;
+}
 #main-container{
 display: grid;
 grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
@@ -24,5 +35,6 @@ height: 550px;
     border-radius: 100%;
     background-color: aqua;
 }
+
 
 
